# fishasn1

./: README.md  meson.build
src/: main.c  meson.build  tokenizer.c  tokenizer.h
test/: meson.build  test_tokenizer.c
